--- a/Projetize.Api/appsettings.json
+++ b/Projetize.Api/appsettings.json
@@ -16,6 +16,11 @@
         "Audience": "Projetize.Users",
         "ExpireHours": 2
     },
-
+    
+    "SendGrid": {
+            "Key": "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",
+            "FromEmail": "projetize.tasker@gmail.com",
+            "FromName": "Projetize"
+    },
     "AllowedHosts": "*"
 }
