--- a/Projetize.Api/appsettings.json
+++ b/Projetize.Api/appsettings.json
@@ -20,7 +20,7 @@
     "SendGrid": {
             "Key": "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",
             "FromEmail": "projetize.tasker@gmail.com",
-            "FromName": "Projetize"
+            "FromName": "no-reply - Projetize"
     },
     "AllowedHosts": "*"
 }
