--- a/Projetize.Api/appsettings.json
+++ b/Projetize.Api/appsettings.json
@@ -7,7 +7,7 @@
     },
 
     "ConnectionStrings": {
-        "SqlServer": "Server=localhost;Database=ProjetizeDb;User Id=sa;Password=L1br@c0m;TrustServerCertificate=True;"
+        "SqlServer": "Server=localhost;Database=ProjetizeDb;User Id=sa;Password=desenvolvimento;TrustServerCertificate=True;"
     },
 
     "Jwt": {
@@ -16,11 +16,6 @@
         "Audience": "Projetize.Users",
         "ExpireHours": 2
     },
-    
-    "SendGrid": {
-            "Key": "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",
-            "FromEmail": "projetize.tasker@gmail.com",
-            "FromName": "no-reply - Projetize"
-    },
+
     "AllowedHosts": "*"
 }
