--- a/Projetize.Api/appsettings.json
+++ b/Projetize.Api/appsettings.json
@@ -7,7 +7,7 @@
     },
 
     "ConnectionStrings": {
-        "SqlServer": "Server=localhost;Database=ProjetizeDb;User Id=sa;Password=desenvolvimento;TrustServerCertificate=True;"
+        "SqlServer": "Server=localhost;Database=ProjetizeDb;User Id=sa;Password=L1br@c0m;TrustServerCertificate=True;"
     },
 
     "Jwt": {
