--- a/Projetize.App/Projetize.App.csproj
+++ b/Projetize.App/Projetize.App.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Docker.DotNet" Version="3.125.15" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.16" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.5" />
+    <PackageReference Include="Microsoft.JSInterop" Version="8.0.16" />
     <PackageReference Include="MudBlazor" Version="8.6.0" />
   </ItemGroup>
 
